# warfork-qfusion

./: .gitignore  .gitmodules  BUILD.md  Dockerfile  PROFILING.md  build-linux.sh  build-macos.sh  build-windows.ps1  docker-entrypoint.sh
.circleci/: config.yml
.github/scripts/: build-matrix.sh
.github/server-management/: README.md  Warfork.sh
.github/workflows/: build.yml  deploy-servers.yml  deploy.yml  linux-build.yml  macos-build.yml  server-deploy.yml  server-standalone-steam-deploy.yml  windows-build.yml
assets/: dedicated_autoexec.cfg  default.cfg  tvserver_autoexec.cfg
source/: CMakeLists.txt  CMakePresets.json  dev_symlinks.sh  package_assets.cmake  vcpkg.json
source/cgame/: cg_cmds.cpp  cg_democams.cpp  cg_ents.cpp  cg_events.cpp  cg_hud.cpp  cg_local.h  cg_main.cpp  cg_media.cpp  cg_players.cpp  cg_pmodels.cpp  cg_pmodels.h  cg_public.h  cg_scoreboard.cpp  cg_screen.cpp  cg_syscalls.cpp  cg_syscalls.h  cg_teams.cpp  cg_vweap.cpp  cg_wmodels.cpp  ref.h
source/cin/: cin.c
source/client/: CMakeLists.txt  cin.c  cl_demo.c  cl_game.c  cl_input.c  cl_main.c  cl_parse.c  cl_presence.c  cl_screen.c  cl_serverlist.c  cl_sound.c  cl_ui.c  cl_vid.c  client.h  console.c  ftlib.c  vid.h
source/ftlib/: ftlib.c  ftlib_draw.c  ftlib_local.h  ftlib_public.h  ftlib_syscalls.c  ftlib_syscalls.h  mod_ftlib.h
source/game/: g_ascript.cpp  g_callvotes.cpp  g_cmds.cpp  g_local.h  g_weapon.cpp  mod_game.h  p_client.cpp
source/gameshared/: bsp_format.h  file_format.c  file_format.h  gs_pmove.c  gs_public.h  gs_qrespath.h  q_arch.h  q_comref.h  q_sds.h  q_shared.h
source/qcommon/: ascript.c  bsp.c  bsp.h  cmd.c  cmd.h  common.c  crashpad.cpp  crashpad.h  cvar.c  files.c  l10n.c  mem.c  mod_cm.h  mod_cmd.h  mod_fs.h  mod_mem.h  mod_win.h  net.c  qcommon.h  snap_read.c  steam.c  steam.h  sys_fs.h  threads.c  version.h
source/qcore/: CMakeLists.txt  qhash.h  qstr.c  qstr.h  qtypes.h  ri_format.c  ri_format.h  ri_index_pool.c  ri_index_pool.h  ri_offset_alloc.c  ri_offset_alloc.h  ri_texture_buffer.c  ri_texture_buffer.h
source/ref_base/: CMakeLists.txt  r_image_buf.c  r_image_buf.h  r_image_buf_manipulator.c  r_image_buf_manipulator.h  r_imagelib.c  r_imagelib.h  r_ktx_loader.c  r_ktx_loader.h  r_public.h  r_texture_format.c  r_texture_format.h  r_texture_format_decode.c  r_texture_format_decode.h  ref_mod.h
source/ref_gl/: CMakeLists.txt  bsp_header.c  bsp_header.h  q_sds.c  q_sds.h  r_alias.c  r_backend.c  r_backend_program.c  r_cmdque.c  r_cmds.c  r_config.h  r_drawlist.h  r_framebuffer.c  r_frontend.c  r_frontend.h  r_glimp.c  r_glimp.h  r_image.c  r_image.h  r_imagelib.c  r_imagelib.h  r_light.c  r_local.h  r_main.c  r_math_util.c  r_math_util.h  r_math_util_sintable.inl  r_mesh.c  r_mesh.h  r_model.c  r_model.h  r_nri.c  r_nri.h  r_nriimp.c  r_nriimp.h  r_portals.c  r_program.c  r_program.h  r_public.c  r_public.h  (+28 more)
source/ref_nri/: CMakeLists.txt  qgl_types.h  qmesa.h  r_alias.c  r_backend.c  r_backend.h  r_backend_local.h  r_backend_program.c  r_capture.c  r_capture.h  r_cin.c  r_cmds.c  r_defines.h  r_descriptor_pool.c  r_descriptor_pool.h  r_frame_cmd_buffer.c  r_frame_cmd_buffer.h  r_frontend.c  r_frontend.h  r_glimp.h  r_image.c  r_image.h  r_light.c  r_local.h  r_main.c  r_mesh.c  r_mesh.h  r_model.c  r_nri.h  r_poly.c  r_portals.c  r_program.c  r_program.h  r_program_cache.c  r_program_cache.h  r_public.c  r_q3bsp.c  r_register.c  r_resource.h  r_scene.c  (+40 more)
source/sdl/: sdl_client.c  sdl_clipboard.c  sdl_glw.c  (+11 more)
source/snd_openal/: CMakeLists.txt  qal.h  snd_al.c  snd_local.h  snd_main.c  snd_sources.c  snd_stream.c
(+186 files in other folders)
